--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="script.js"></script>
-	<link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="loginStyle.css">
 	<link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -122,6 +123,63 @@
        </div>
      </div>
     </div>
+</div>
+<!--  Login Scetion  -->
+<div class="login-cont">
+
+    <div class="login-form">
+        <form action="/examples/actions/confirmation.php" method="post">
+          <div class="avatar"><i class="material-icons">&#xE7FF;</i></div>
+          <h4 class="modal-title">Login to Your Account</h4>
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Username"
+              required="required"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              class="form-control"
+              placeholder="Password"
+              required="required"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="text"
+              id="age"
+              class="form-control"
+              placeholder="Age"
+              required="required"
+            />
+          </div>
+          <div class="form-group">
+            <select name="city" id="city">
+              <option value="">City</option>
+              <option value="tartus">Tartus</option>
+              <option value="damas">Damascus</option>
+            </select>
+          </div>
+          <div class="form-group small clearfix">
+            <label class="checkbox-inline"
+              ><input type="checkbox" /> Remember me</label
+            >
+            <a href="#" class="forgot-link">Forgot Password?</a>
+          </div>
+          <a
+            id="login"
+            href="#"
+            class="btn btn-primary btn-block btn-lg text-light"
+            >Login</a
+          >
+        </form>
+        <div class="text-center small">
+          Don't have an account? <a href="#">Sign up</a>
+        </div>
+      </div>
 </div>
  <script src="script.js"></script>
 </body>
