--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
 </div>
 <!--  Login Scetion  -->
-<div class="login-cont">
+<div class="login-cont" id="loginPage">
 
     <div class="login-form">
         <form action="/examples/actions/confirmation.php" method="post">
@@ -133,6 +133,7 @@
           <h4 class="modal-title">Login to Your Account</h4>
           <div class="form-group">
             <input
+             id="username"
               type="text"
               class="form-control"
               placeholder="Username"
@@ -141,6 +142,7 @@
           </div>
           <div class="form-group">
             <input
+              id="password"
               type="password"
               class="form-control"
               placeholder="Password"
@@ -149,6 +151,7 @@
           </div>
           <div class="form-group">
             <input
+            id="age"
               type="text"
               id="age"
               class="form-control"
@@ -181,6 +184,9 @@
         </div>
       </div>
 </div>
+
+<audio id="winSound" src="./sounds/win.mp3"></audio>
+<audio id="loseSond" src="./sounds/lose.mp3"></audio>
  <script src="script.js"></script>
 </body>
 
