--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="script.js"></script>
     <link rel="stylesheet" href="bootstrap.css" />
     <link rel="stylesheet" href="loginStyle.css">
