--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+        <div class="counter-cont" >
+                <span class="counterSpan" >1</span>
+              </div>
 <div class="app row">
     <div class="col-lg-2 col-md-12 w-100 siide">
         <div class="option">About
