--- a/index.html
+++ b/index.html
@@ -1,142 +1,232 @@
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="script.js"></script>
     <link rel="stylesheet" href="bootstrap.css" />
-    <link rel="stylesheet" href="loginStyle.css">
-	<link rel="stylesheet" href="styles.css" />
-</head>
+    <link rel="stylesheet" href="loginStyle.css" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
-        <div class="counter-cont" >
-                <span class="counterSpan" >1</span>
-              </div>
-<div class="app row">
-    <div class="col-lg-2 col-md-12 w-100 siide">
-        <div class="option">About
-            <div class="details">
-                <ul>
-                    <li>There is two pics similar</li>
-                    <li>mathv them</li>
-                    <li>to win big prize</li>
-                </ul>
-            </div>
-        </div>
-        <div class="option">Prize
-            <ul>
-                <li>In 2 tries: 10,000$</li>
-                <li>In 10 tries: 5,000$</li>
-                <li>In 20 tries: 1,000$</li>
-            </ul>
-        </div>
+  <body>
+    <div class="counter-cont">
+      <span class="counterSpan">1</span>
     </div>
-    <div class="col-lg-10 col-md-12 w-100 maiin">
-        <div class="row">
-        <div class="col-md-12 text-center logo">
-            <div class="logo-cont">
-                <img src="https://s2.logaster.com/static/v3/img/products/logo.png" alt="">
-           </div>
-	   </div>
-    <div class="col-12">
-        <div class="container d-flex justify-content-center">
-            <div class="game w-100 row text-center d-flex justify-content-center">
-                <div class="col-2 card"  id="cardo" >
-                    <img  class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s1.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s2.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s3.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s1.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s19.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s4.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s5.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s6.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s7.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s8.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s9.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s10.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s11.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s12.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s13.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s14.jpg" alt="">
-                </div>
-                <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s15.jpg" alt="">
-              </div>
-              <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s16.jpg" alt="">
-              </div>
-              <div class="col-2 card">
-                    <img class="card-img front" src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back"  src="./images/s17.jpg" alt="">
-              </div>
-                <div class="col-2 card">
-                    <img class="card-img front"  src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="">
-                    <img class="card-img back" src="./images/s18.jpg" alt="">
-               </div>
+    <div class="app row">
+      <div class="col-lg-2 col-md-12 w-100 siide">
+        <div class="option">
+          About
+          <div class="details">
+            <ul>
+              <li>There is two pics similar</li>
+              <li>mathv them</li>
+              <li>to win big prize</li>
+            </ul>
           </div>
         </div>
-       </div>
-     </div>
+        <div class="option">
+          Prize
+          <ul>
+            <li>In 2 tries: 10,000$</li>
+            <li>In 10 tries: 5,000$</li>
+            <li>In 20 tries: 1,000$</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-lg-10 col-md-12 w-100 maiin">
+        <div class="row">
+          <div class="col-md-12 text-center logo">
+            <div class="logo-cont">
+              <img
+                src="https://s2.logaster.com/static/v3/img/products/logo.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="container d-flex justify-content-center">
+              <div class="endScreen">
+                <div>Congrats You win!<br />Play Again<br/><span class="restart">Restart</span></div>
+                
+              </div>
+              <div
+                class="game w-100 row text-center d-flex justify-content-center"
+              >
+                <div class="col-2 card" id="cardo">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s1.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s2.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s3.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s1.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s19.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s4.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s5.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s6.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s7.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s8.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s9.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s10.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s11.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s12.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s13.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s14.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s15.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s16.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s17.jpg" alt="" />
+                </div>
+                <div class="col-2 card">
+                  <img
+                    class="card-img front"
+                    src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
+                    alt=""
+                  />
+                  <img class="card-img back" src="./images/s18.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-<!--  Login Scetion  -->
-<div class="login-cont" id="loginPage">
-
-    <div class="login-form">
+    <!--  Login Scetion  -->
+    <div class="login-cont" id="loginPage">
+      <div class="login-form">
         <form action="/examples/actions/confirmation.php" method="post">
           <div class="avatar"><i class="material-icons">&#xE7FF;</i></div>
           <h4 class="modal-title">Login to Your Account</h4>
           <div class="form-group">
             <input
-             id="username"
+              id="username"
               type="text"
               class="form-control"
               placeholder="Username"
@@ -154,7 +244,7 @@
           </div>
           <div class="form-group">
             <input
-            id="age"
+              id="age"
               type="text"
               id="age"
               class="form-control"
@@ -186,11 +276,10 @@
           Don't have an account? <a href="#">Sign up</a>
         </div>
       </div>
-</div>
+    </div>
 
-<audio id="winSound" src="./sounds/win.mp3"></audio>
-<audio id="loseSond" src="./sounds/lose.mp3"></audio>
- <script src="script.js"></script>
-</body>
-
+    <audio id="winSound" src="./sounds/win.mp3"></audio>
+    <audio id="loseSond" src="./sounds/lose.mp3"></audio>
+    <script src="script.js"></script>
+  </body>
 </html>
