--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
         <div class="row">
           <div class="col-md-12 text-center logo">
             <div class="logo-cont">
-              <img
-                src="https://s2.logaster.com/static/v3/img/products/logo.png"
-                alt=""
-              />
+              <img src="logo.png" alt="" />
             </div>
           </div>
           <div class="col-12">
             <div class="container d-flex justify-content-center">
               <div class="endScreen">
-                <div>Congrats You win!<br />Play Again<br/><span class="restart">Restart</span></div>
-                
+                <div>
+                  Congrats You win!<br />Play Again<br /><span class="restart"
+                    >Restart</span
+                  >
+                </div>
               </div>
               <div
                 class="game w-100 row text-center d-flex justify-content-center"
@@ -221,8 +221,8 @@
     <!--  Login Scetion  -->
     <div class="login-cont" id="loginPage">
       <div class="login-form">
-        <form action="/examples/actions/confirmation.php" method="post">
-          <div class="avatar"><i class="material-icons">&#xE7FF;</i></div>
+        <form>
+          <div class="avatar"></div>
           <h4 class="modal-title">Login to Your Account</h4>
           <div class="form-group">
             <input
