--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row">
           <div class="col-md-12 text-center logo">
             <div class="logo-cont">
-              <img src="logo.png" alt="" />
+              <img src="logoz.png" alt="" />
             </div>
           </div>
           <div class="col-12">
