add music in the background

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
 
     <audio id="winSound" src="./sounds/win.mp3"></audio>
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
+    <audio id="backmusic" src="./sounds/back-music.mp3"  ></audio>
     <script src="script.js"></script>
   </body>
 </html>
