--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@
             >Login</a
           >
         </form>
-
+        <div class="text-center small">
+          Don't have an account? <a href="#">Sign up</a>
+        </div>
       </div>
     </div>
 
