--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="col-12">
-            <div class="container d-flex justify-content-center">
+            <div class="container d-flex  justify-content-center">
               <div class="endScreen">
                 <div>
                   Congrats You win!<br />Play Again<br /><span class="restart"
@@ -214,6 +214,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="col-sm-12 d-md-none text-center">
+            <p class="more">!</p>
           </div>
         </div>
       </div>
