--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Language" content="en-US, ar-SA" />
     <script src="script.js"></script>
     <link rel="stylesheet" href="bootstrap.css" />
     <link rel="stylesheet" href="loginStyle.css" />
@@ -30,6 +31,17 @@
             <li>In 2 tries: 10,000$</li>
             <li>In 10 tries: 5,000$</li>
             <li>In 20 tries: 1,000$</li>
+          </ul>
+        </div>
+        <div class="option">
+          Language
+          <ul style="list-style-type: disc;">
+            <li>
+              <select name="lang" id="lang">
+                <option onclick="en();" value="en">English</option>
+                <option onclick="ar();" value="ar">Arabic</option>
+              </select>
+            </li>
           </ul>
         </div>
       </div>
@@ -285,5 +297,78 @@
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
     <audio id="backmusic" src="./sounds/back-music.mp3" loop></audio>
     <script src="script.js"></script>
+    <script>
+      var enContent = `        <div class="option">
+About
+<div class="details">
+  <ul>
+    <li>There is two pics similar</li>
+    <li>mathv them</li>
+    <li>to win big prize</li>
+  </ul>
+</div>
+</div>
+<div class="option">
+Prize
+<ul>
+  <li>In 2 tries: 10,000$</li>
+  <li>In 10 tries: 5,000$</li>
+  <li>In 20 tries: 1,000$</li>
+</ul>
+</div>
+<div class="option">
+Language
+<ul style="list-style-type: disc;">
+    <li>
+              <select name="lang" id="lang">
+                <option onclick="en();" >English</option>
+                <option onclick="ar();">Arabic</option>
+              </select>
+            </li>
+</ul>
+</div>`;
+      var arContent = `<div class="option">
+حول
+<div class="details">
+  <ul>
+    <li>في اللائحة هناك صورتين متماثلتين</li>
+    <li>اعثر عليهم</li>
+    <li>واربح جوائزة كبيرة</li>
+  </ul>
+</div>
+</div>
+<div class="option">
+الجوائز
+<ul>
+  <li>اربح بمحاولتين واكسب: 10,000$</li>
+  <li>اربح بخمس محاولات واكسب: 5,000$</li>
+  <li>اربح بعشرين محاولة وامسب: 1000$</li>
+</ul>
+</div>
+<div class="option">
+  اللغة
+  <ul style="list-style-type: disc;" >
+      <div class="form-group">
+              <select name="lang" id="lang">
+                <option onclick="en();" >انكليزي</option>
+                <option onclick="ar();" >عربي</option>
+              </select>
+   </div>
+  </ul>
+</div>`;
+
+      var thePage = document.querySelector("html");
+      var side = document.querySelector(".siide");
+      function ar() {
+        thePage.setAttribute("lang", "ar");
+        console.log("Ar");
+        var $ar = (side.innerHTML = arContent);
+      }
+      function en() {
+        thePage.setAttribute("lang", "en");
+        console.log("en");
+        var $en = (side.innerHTML = enContent);
+      }
+    </script>
   </body>
 </html>
