--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Language" content="en-US, ar-SA" />
     <script src="script.js"></script>
     <link rel="stylesheet" href="bootstrap.css" />
@@ -14,6 +14,13 @@
       <span class="counterSpan">1</span>
     </div>
     <div class="app row">
+        <div class="endScreen">
+            <div>
+              Congrats You win!<br />Play Again<br /><span class="restart"
+                >Restart</span
+              >
+            </div>
+          </div>
       <div class="col-lg-2 col-md-12 w-100 siide">
         <div class="option">
           About
@@ -54,13 +61,6 @@
           </div>
           <div class="col-12">
             <div class="container d-flex  justify-content-center">
-              <div class="endScreen">
-                <div>
-                  Congrats You win!<br />Play Again<br /><span class="restart"
-                    >Restart</span
-                  >
-                </div>
-              </div>
               <div
                 class="game w-100 row text-center d-flex justify-content-center"
               >
@@ -70,6 +70,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s1.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -78,6 +79,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s2.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -86,6 +88,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s3.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -94,6 +97,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s1.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -102,6 +106,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s19.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -110,6 +115,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s4.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -118,6 +124,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s5.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -126,6 +133,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s6.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -134,6 +142,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s7.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -142,6 +151,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s8.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -150,6 +160,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s9.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -158,6 +169,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s10.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -166,6 +178,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s11.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -174,6 +187,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s12.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -182,6 +196,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s13.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -190,6 +205,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s14.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -198,6 +214,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s15.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -206,6 +223,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s16.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -214,6 +232,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s17.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -222,15 +241,29 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
+                  <span class="views">Views: 40</span>
                   <img class="card-img back" src="./images/s18.jpg" alt="" />
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-12 d-md-none text-center">
-            <p class="more">!</p>
+          <div class="col-sm-12  text-center btns-container">
+            <span class="more">❗</span>
+            <span class="more show-winners">🏆</span>
           </div>
         </div>
+      </div>
+    </div>
+    <!-- Winners Screen -->
+    <div class="winners-container">
+      <div class="close-winners">CLOSE</div>
+      <div class="winners-box">
+         <ul>
+           <li>#1 Ahmad: Mercedes G63</li>
+           <li>#2 Ahmad: Rolex Watch</li>
+           <li>#3 Ahmad: Small House</li>
+           <li>#4 Ahmad: iPhone 11</li>
+         </ul>
       </div>
     </div>
     <!--  Login Scetion  -->
@@ -295,7 +328,7 @@
 
     <audio id="winSound" src="./sounds/win.mp3"></audio>
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
-    <audio id="backmusic" src="./sounds/back-music.mp3" loop></audio>
+    <audio id="backmusic" src="./sounds/back-music.mp3" autoplay="true" loop="true"></audio>
     <script src="script.js"></script>
     <script>
       var enContent = `        <div class="option">
