--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s1.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -79,7 +79,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s2.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -88,7 +88,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s3.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -97,7 +97,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s1.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -106,7 +106,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s19.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -115,7 +115,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s4.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -124,7 +124,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s5.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -133,7 +133,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s6.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -142,7 +142,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s7.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -151,7 +151,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s8.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -160,7 +160,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s9.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -169,7 +169,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s10.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -178,7 +178,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s11.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -187,7 +187,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s12.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -196,7 +196,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s13.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -205,7 +205,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s14.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -214,7 +214,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s15.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -223,7 +223,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s16.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -232,7 +232,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s17.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -241,7 +241,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">Views: 40</span>
+                  <span class="views">40</span>
                   <img class="card-img back" src="./images/s18.jpg" alt="" />
                 </div>
               </div>
