--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,13 +14,13 @@
       <span class="counterSpan">1</span>
     </div>
     <div class="app row">
-        <div class="endScreen">
-            <div>
-              Congrats You win!<br />Play Again<br /><span class="restart"
-                >Restart</span
-              >
-            </div>
-          </div>
+      <div class="endScreen">
+        <div>
+          الف مبروك لقد ربحت<br /><a href="./winner-info.html" class="continue"
+            >استكمل بيانات الربح</a
+          >
+        </div>
+      </div>
       <div class="col-lg-2 col-md-12 w-100 siide">
         <div class="option">
           About
@@ -258,12 +258,12 @@
     <div class="winners-container">
       <div class="close-winners">CLOSE</div>
       <div class="winners-box">
-         <ul>
-           <li>#1 Ahmad: Mercedes G63</li>
-           <li>#2 Ahmad: Rolex Watch</li>
-           <li>#3 Ahmad: Small House</li>
-           <li>#4 Ahmad: iPhone 11</li>
-         </ul>
+        <ul>
+          <li>#1 Ahmad: Mercedes G63</li>
+          <li>#2 Ahmad: Rolex Watch</li>
+          <li>#3 Ahmad: Small House</li>
+          <li>#4 Ahmad: iPhone 11</li>
+        </ul>
       </div>
     </div>
     <!--  Login Scetion  -->
@@ -328,7 +328,12 @@
 
     <audio id="winSound" src="./sounds/win.mp3"></audio>
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
-    <audio id="backmusic" src="./sounds/back-music.mp3" autoplay="true" loop="true"></audio>
+    <audio
+      id="backmusic"
+      src="./sounds/back-music.mp3"
+      autoplay="true"
+      loop="true"
+    ></audio>
     <script src="script.js"></script>
     <script>
       var enContent = `        <div class="option">
