--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           </div>
           <div class="col-sm-12  text-center btns-container">
             <span class="more">❗</span>
-            <span class="more show-winners">🏆</span>
+            <span class="show-winners">🏆</span>
           </div>
         </div>
       </div>
