--- a/winner-info.html
+++ b/winner-info.html
@@ -41,6 +41,7 @@
             class="btn btn-block btn-lg text-light"
             >تم</a
           >
+          <input type="hidden" id="hidden" />
         </form>
         <hr />
         <h4 id="errMsg" class="text-light"></h4>
