--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
       </div>
       <div class="col-lg-2 col-md-12 w-100 siide">
         <div class="option">
-          About
+          حول
           <div class="details">
             <ul>
-              <li>There is two pics similar</li>
-              <li>mathv them</li>
-              <li>to win big prize</li>
+              <li>في اللائحة هناك صورتين متماثلتين</li>
+              <li>اعثر عليهم</li>
+              <li>واربح جوائزة كبيرة</li>
             </ul>
           </div>
         </div>
         <div class="option">
-          Prize
+          الجوائز
           <ul>
-            <li>In 2 tries: 10,000$</li>
-            <li>In 10 tries: 5,000$</li>
-            <li>In 20 tries: 1,000$</li>
+            <li>اربح بمحاولتين واكسب: 10,000$</li>
+            <li>اربح بخمس محاولات واكسب: 5,000$</li>
+            <li>اربح بعشرين محاولة وامسب: 1000$</li>
           </ul>
         </div>
         <div class="option">
-          Language
+          اللغة
           <ul style="list-style-type: disc;">
             <li>
-              <a onclick="en();  ">English</a>
+              <a onclick="en();">انكليزي</a>
             </li>
             <li>
-              <a onclick="ar();">Arabic</a>
+              <a onclick="ar();">عربي</a>
             </li>
           </ul>
         </div>
@@ -61,6 +61,27 @@
           </div>
           <div class="col-12">
             <div class="container d-flex  justify-content-center">
+              <div class="wrapper">
+                <div class="closeMore">❌</div>
+                <div class="holder">
+                  <div class="kol">
+                    <div class="img"></div>
+                    <div class="moreAbout">...أعرف المزيد</div>
+                  </div>
+                  <div class="kol">
+                    <div class="img"></div>
+                    <div class="moreAbout">...أعرف المزيد</div>
+                  </div>
+                </div>
+                <div class="product-info">
+                  <ul>
+                    <li>المنتج: حلق زيركون</li>
+                    <li>السعر: 10000</li>
+                    <li>المحل: انجل للعطورات - شارع الثورة</li>
+                    <li>رقم المحل: 5684789</li>
+                  </ul>
+                </div>
+              </div>
               <div
                 class="game w-100 row text-center d-flex justify-content-center"
               >
