--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
       autoplay="true"
       loop="true"
     ></audio>
+    <script src="confetti.js"></script>
     <script src="script.js"></script>
     <script>
       var enContent = `        <div class="option">
