--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="option">
           اللغة
-          <ul style="list-style-type: disc;">
+          <ul style="list-style-type: disc">
             <li>
               <a onclick="en();">انكليزي</a>
             </li>
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="col-12">
-            <div class="container d-flex  justify-content-center">
+            <div class="container d-flex justify-content-center">
               <div class="wrapper">
                 <div class="closeMore">❌</div>
                 <div class="holder">
@@ -92,7 +92,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s1.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -101,7 +101,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s2.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -110,7 +110,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s3.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -119,7 +119,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s1.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -128,7 +128,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s19.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -137,7 +137,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s4.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -146,7 +146,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s5.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -155,7 +155,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s6.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -164,7 +164,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s7.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -173,7 +173,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s8.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -182,7 +182,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s9.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -191,7 +191,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s10.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -200,7 +200,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s11.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -209,7 +209,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s12.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -218,7 +218,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s13.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -227,7 +227,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s14.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -236,7 +236,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s15.jpg" alt="" />
+                  <img class="card-img back" src="15.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -245,7 +245,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s16.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -254,7 +254,7 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s17.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
@@ -263,12 +263,12 @@
                     alt=""
                   />
                   <span class="views">40</span>
-                  <img class="card-img back" src="./images/s18.jpg" alt="" />
+                  <img class="card-img back" src="" alt="" />
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-12  text-center btns-container">
+          <div class="col-sm-12 text-center btns-container">
             <span class="more">❗</span>
             <span class="show-winners">🏆</span>
           </div>
