--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
           الف مبروك لقد ربحت<br /><a href="./winner-info.html" class="continue"
             >استكمل بيانات الربح</a
           >
+          <h2
+            class="arrow"
+            style="position: relative; top: 20px; font-size: 90px; left: -20px"
+          >
+            ➯
+          </h2>
         </div>
       </div>
       <div class="col-lg-2 col-md-12 w-100 siide">
@@ -91,7 +97,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -100,7 +106,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -109,7 +115,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -118,7 +124,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -127,7 +133,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -136,7 +142,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -145,7 +151,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -154,7 +160,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -163,7 +169,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -172,7 +178,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -181,7 +187,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -190,7 +196,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -199,7 +205,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -208,7 +214,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -217,7 +223,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -226,7 +232,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -235,7 +241,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="15.jpg" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -244,7 +250,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -253,7 +259,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
@@ -262,7 +268,7 @@
                     src="https://ih1.redbubble.net/image.379308893.7676/st,small,507x507-pad,600x600,f8f8f8.jpg"
                     alt=""
                   />
-                  <span class="views">40</span>
+                  <span class="views">👁️ 40</span>
                   <img class="card-img back" src="blankback.png" alt="" />
                 </div>
               </div>
