--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     alt=""
                   />
                   <span class="views">👁️ 40</span>
-                  <img class="card-img back" src="15.jpg" alt="" />
+                  <img class="card-img back" src="blankback.png" alt="" />
                 </div>
                 <div class="col-2 card">
                   <img
