--- a/winner-info.html
+++ b/winner-info.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="login-cont">
-      <div class="login-form" style="margin: 160px auto;">
+      <div class="login-form" style="margin: 160px auto">
         <form>
           <h4 class="modal-title">
             اسكمل بياناتك الشخصية <br />
@@ -37,7 +37,7 @@
           <a
             id="done"
             href="#"
-            style="background: rgb(235, 44, 149);"
+            style="background: rgb(235, 44, 149)"
             class="btn btn-block btn-lg text-light"
             >تم</a
           >
@@ -47,7 +47,7 @@
         <h4 id="errMsg" class="text-light"></h4>
       </div>
     </div>
-
+    <audio src="./sounds/clapping.mp3" id="clapping" loop></audio>
     <script src="winnerInfo.js"></script>
   </body>
 </html>
