--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
 
     <audio id="winSound" src="./sounds/win.mp3"></audio>
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
+    <audio id="clapping" src="./sounds/clapping.mp3"></audio>
     <audio
       id="backmusic"
       src="./sounds/back-music.mp3"
