--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <audio
+      id="backmusic"
+      src="./sounds/backmusic.mp3"
+      autoplay="true"
+      loop="true"
+    ></audio>
     <div class="counter-cont">
       <span class="counterSpan">1</span>
     </div>
@@ -356,12 +362,7 @@
     <audio id="winSound" src="./sounds/win.mp3"></audio>
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
     <audio id="clapping" src="./sounds/clapping.mp3"></audio>
-    <audio
-      id="backmusic"
-      src="./sounds/back-music.mp3"
-      autoplay="true"
-      loop="true"
-    ></audio>
+
     <script src="confetti.js"></script>
     <script src="script.js"></script>
     <script>
