--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
   </head>
 
   <body>
-    <audio
-      id="backmusic"
-      src="./sounds/backmusic.mp3"
-      autoplay="true"
-      loop="true"
-    ></audio>
+    <audio id="backmusic" src="./sounds/backmusic.mp3" autoplay loop></audio>
     <div class="counter-cont">
       <span class="counterSpan">1</span>
     </div>
