--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <audio id="backmusic" src="./sounds/backmusic.mp3" autoplay loop></audio>
+    <audio id="backmusic" src="./sounds/backmusic.mp3" loop></audio>
     <div class="counter-cont">
       <span class="counterSpan">1</span>
     </div>
