--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         </div>
       </div>
     </div>
-    <audio id="backmusic" src="./sounds/backmusic.mp3" loop></audio>
+    <audio id="backmusic" src="./sounds/backmusic.mp3" autoplay loop></audio>
     <audio id="winSound" src="./sounds/win.mp3"></audio>
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
     <audio id="clapping" src="./sounds/clapping.mp3"></audio>
@@ -361,6 +361,10 @@
     <script src="confetti.js"></script>
     <script src="script.js"></script>
     <script>
+      var backmusic = document.getElementById("backmusic");
+      document.onload = () => {
+        backmusic.play();
+      };
       var enContent = `        <div class="option">
 About
 <div class="details">
