--- a/index.html
+++ b/index.html
@@ -273,7 +273,12 @@
         </div>
       </div>
     </div>
-    <audio id="backmusic" src="./sounds/backmusic.mp3" autoplay loop></audio>
+    <audio
+      id="backmusic"
+      src="./sounds/backmusic.mp3"
+      autoplay="true"
+      loop
+    ></audio>
     <audio id="winSound" src="./sounds/win.mp3"></audio>
     <audio id="loseSond" src="./sounds/lose.mp3"></audio>
     <audio id="clapping" src="./sounds/clapping.mp3"></audio>
